--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,10 +2,12 @@
 
 {% block body %}
 
-    <h1>{{ title }}</h1>
-
-    <a href="{{ path('admin/users_list') }}">Users list</a>
-
-    <a href="{{ path('app_logout') }}">Exit</a>
+    <div class="container-fluid">
+        <div class="row no-gutters">
+            <div class="col-12 col-lg-6 col-md-6">
+                <h1 class="display-4">{{ title }}</h1>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
