--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -2,18 +2,17 @@
 
 {% block body %}
 
-    <h1>{{ title }}</h1>
-
-    <h2>Users list</h2>
-
-    <a href="{{ path('admin/users/create') }}">Create user</a>
-
-    <ul>
-        {% for user in users %}
-        <li>{{ user.email }} {{ user.roles | json_encode }}</li>
-        {% endfor %}
-    </ul>
-
-    <a href="{{ path('app_logout') }}">Exit</a>
+    <div class="container-fluid">
+        <div class="row no-gutters">
+            <div class="col-12">
+                <h1 class="display-4 text-center mt-5">{{ title }}</h1>
+                <ul>
+                    {% for user in users %}
+                        <li>{{ user.email }} {{ user.roles | json_encode }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
