--- a/app/templates/main/base.html.twig
+++ b/app/templates/main/base.html.twig
@@ -19,6 +19,7 @@
                     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
             <script src="{{ asset('assets/framework/bootstrap-4.6.0/js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('assets/framework/vue/vue.min.js') }}"></script>
         {% endblock %}
     </head>
     <body>
