--- a/app/templates/main/index.html.twig
+++ b/app/templates/main/index.html.twig
@@ -10,6 +10,24 @@
         </div>
     </div>
 
-    <a href="{{ path('admin') }}">Admin panel</a>
+    <div class="container-fluid">
+        <div class="row no-gutters justify-content-center mt-5">
+            <div class="col-12 col-lg-12 col-md-12" id="app">
+                <a href="{{ path('admin') }}">[[ message ]]</a>
+            </div>
+        </div>
+    </div>
+
+    {% block addAdminLink %}
+        <script>
+            Vue.options.delimiters = ["[[", "]]"];
+            let app = new Vue({
+                el: "#app",
+                data: {
+                	message: "Admin panel"
+                }
+            })
+        </script>
+    {% endblock %}
 
 {% endblock %}
