--- a/app/templates/admin/base.html.twig
+++ b/app/templates/admin/base.html.twig
@@ -40,6 +40,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('admin/users/create') }}">Create user</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('admin/posts_list') }}">Post list</a>
+            </li>
         </ul>
         <form class="form-inline">
             {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
