--- a/app/templates/admin/base.html.twig
+++ b/app/templates/admin/base.html.twig
@@ -35,13 +35,10 @@
                 <a class="nav-link" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin/users_list') }}">User list</a>
+                <a class="nav-link" href="{{ path('admin/users_list') }}">Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin/users/create') }}">Create user</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin/posts_list') }}">Post list</a>
+                <a class="nav-link" href="{{ path('admin/posts_list') }}">Posts</a>
             </li>
         </ul>
         <form class="form-inline">
