--- a/app/templates/admin/post/index.html.twig
+++ b/app/templates/admin/post/index.html.twig
@@ -4,18 +4,36 @@
 
     <div class="container-fluid">
         <div class="row">
-            {% for post in posts %}
-                <div class="col-sm-3 mt-5">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="{{ post.image }}" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <p class="card-text">{{ post.content }}</p>
-                            <a href="{{ path('admin/post_one', {id: post.id}) }}" class="btn btn-primary">Read more</a>
-                        </div>
+            <div class="col-sm-10 offset-sm-1 mt-5 mb-5">
+
+                {% for message in app.flashes('success') %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <span type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true" class="fa fa-close"></span>
+                        </span>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <td>ID</td>
+                        <td>Title</td>
+                        <td>Content</td>
+                        <td>Edit</td>
+                        <td>Delete</td>
+                    </tr>
+                    {% for post in posts %}
+                        <tr>
+                            <td>{{ post.id }}</td>
+                            <td>{{ post.title }}</td>
+                            <td>{{ post.content }}</td>
+                            <td><span class="fa fa-edit"></span></td>
+                            <td><a href="{{ path('admin/post_delete', {'id': post.id}) }}"><span class="fa fa-remove" style="color: darkred"></span></a></td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
     </div>
 
