--- a/app/templates/main/base.html.twig
+++ b/app/templates/main/base.html.twig
@@ -35,6 +35,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('admin') }}">Admin</a>
+                    </li>
                 </ul>
                 <form class="form-inline">
                     {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
