--- a/app/templates/admin/post/index.html.twig
+++ b/app/templates/admin/post/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-10 offset-sm-1 mt-5 mb-5">
+            <div class="col-sm-10 offset-sm-1 mt-4 mb-5">
 
                 {% for message in app.flashes('success') %}
                     <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -14,6 +14,8 @@
                         </span>
                     </div>
                 {% endfor %}
+
+                <a href="{{ path('admin/posts/create') }}" class="btn btn-info mb-3">Add post</a>
 
                 <table class="table table-striped table-bordered">
                     <tr>
