--- a/app/templates/admin/user/index.html.twig
+++ b/app/templates/admin/user/index.html.twig
@@ -3,14 +3,38 @@
 {% block body %}
 
     <div class="container-fluid">
-        <div class="row no-gutters">
-            <div class="col-12">
-                <h1 class="display-4 text-center mt-5">{{ title }}</h1>
-                <ul>
+        <div class="row">
+            <div class="col-sm-10 offset-sm-1 mt-4 mb-5">
+
+                {% for message in app.flashes('success') %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <span type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true" class="fa fa-close"></span>
+                        </span>
+                    </div>
+                {% endfor %}
+
+                <a href="{{ path('admin/users/create') }}" class="btn btn-info mb-3">Add user</a>
+
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <td>ID</td>
+                        <td>Email</td>
+                        <td>Roles</td>
+                        <td>Edit</td>
+                        <td>Delete</td>
+                    </tr>
                     {% for user in users %}
-                        <li>{{ user.email }} {{ user.roles | json_encode }}</li>
+                        <tr>
+                            <td>{{ user.id }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.roles | json_encode }}</td>
+                            <td><a href="{{ path('admin/user_update', {'id': user.id}) }}"><span class="fa fa-edit" style="color: black"></span></a></td>
+                            <td><a href="{{ path('admin/user_delete', {'id': user.id}) }}"><span class="fa fa-remove" style="color: darkred"></span></a></td>
+                        </tr>
                     {% endfor %}
-                </ul>
+                </table>
             </div>
         </div>
     </div>
