--- a/app/templates/main/post/index.html.twig
+++ b/app/templates/main/post/index.html.twig
@@ -7,7 +7,7 @@
             {% for post in posts %}
                 <div class="col-sm-3 mt-5">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="{{ post.image }}" alt="Card image cap">
+                        <img class="card-img-top" src="{{ asset('/uploads/post/') }}{{ post.image }}" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.content }}</p>
