--- a/app/templates/main/post/post.html.twig
+++ b/app/templates/main/post/post.html.twig
@@ -6,7 +6,7 @@
         <div class="row">
                 <div class="col-12 mt-5">
                     <div class="card">
-                        <img width="320" height="240" class="card-img-top" src="{{ post.image }}" alt="Card image cap">
+                        <img width="320" height="240" class="card-img-top" src="{{ asset('/uploads/post/') }}{{ post.image }}" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.content }}</p>
